Setter enable preview og JAVA_OPTS i Dockerfile